--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "my-nextjs-site",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "export": "next build && next export",
+    "postbuild": "ts-node scripts/generate-sitemap.ts",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
