--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "target": "ES2020",  // Ensure the target is ES2020 or later
+    "lib": ["dom", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true, // Allow importing JSON files
+    "resolveJsonModule": true,  // Make sure this is enabled
     "jsx": "preserve",
     "noEmit": true,
     "incremental": true,
